# melody

./: .gitignore  README.md  anda.hcl  melody.spec  pyproject.toml
.github/workflows/: package.yml
melody/: __init__.py  cli.py  compiler.py  dnf.py  output.py  program.py
